# ansible-role-gluster-repo

./: .ansible-lint.yml  .gitignore  .yamllint  LICENSE  Makefile  README.md  devbox.json  pyproject.toml  requirements.yml
.github/workflows/: lint.yml  molecule.yml  release.yml
defaults/: main.yml
meta/: main.yml
molecule/default/: converge.yml  prepare.yml  verify.yml
tasks/: main.yml
